--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,21 @@ body {
 *:after {
     box-sizing: border-box;
 }
-
+.header {
+    width: 100%;
+    max-width: 1440px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    
+}
 .container {
     width: 100%;
     max-width: 1440px;
     margin: 0 auto;
     color: #fff;
     position: absolute;
+    
 }
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
@@ -47,11 +55,13 @@ h1, h2, h3, h4, h5, h6 {
     height: 127px;
     text-align: left;
     /*font-family: 'montserratregular';
-    font-weight: 400px;*/
+    /*font-weight: 400px;*/
 }
 
 /*----Header----*/
-
+.header__inner {
+    position:absolute;
+}
 .header__logo{
     position: absolute;
     font-size: 30px;
@@ -113,12 +123,54 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 186px;
 }
 
-.icon-menu {
-
+/*-----------Menu-btn------------------*/
+.hamburger-menu {
+    position: absolute;
 }
+#menu__toggle {
+    opacity: 0;
+  }
+  .menu__btn {
+    display: flex; 
+    align-items: center;
+    position: fixed;
+    left: 1348px;
+    width: 92px;
+    height: 92px;
+    cursor: pointer;
+    background-color: #ec3fec;
+    top: -2px;
+    
+    
+   } 
+  /* добавляем "гамбургер" */
+  .menu__btn > span,
+  .menu__btn > span::before {
+    display: block;
+    position: absolute;
+    width: 35px;
+    height: 3px;
+    background-color: black;
+       
+      
+  }
+  .menu__btn > span {
+    content: '';
+    top: 52px; 
+    margin-left: 28px;
+    
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -10px;
+  }
+
 
 /*------Button-------*/
-
+button {
+    padding: 0;
+    font-family: 'Montserrat';
+}    
 .collection__button{
     display: inline-flex;
     align-items: center;
@@ -211,25 +263,36 @@ animation: arrow-1 1s linear infinite;
 }
 
 /*-------Social btn------------*/
-/*.image-imageInst {
-    background: url(../images/EllipseINST.svg);
+.image-imageInst,
+.image-imageVK,
+.image-imageFcb {
+    
     width: 43px;
     height: 43px;
     position: absolute;
     margin-top: 816px;
+}
+.image-imageInst {  
     margin-left: 52px;
 }
 .image-imageVK {
-    background: url(../images/EllipseVK.svg);
-    width: 43px;
-    height: 43px;
-    position: absolute;
-}*/
+    margin-left: 107px;
+}
 .image-imageFcb {
-    background: url(../images/FB.svg);
-    width: 43px;
-    height: 43px;
-    position: absolute;
-    margin-top: 816px;
     margin-left: 162px;
+}
+
+/*--------Scroll------------*/
+
+.scroll {
+    display: inline-block;
+    position: absolute;
+    width: 27px;
+    height: 46px;
+    left: 707px;
+    top: 815px;
+
+    border: 2px solid #000000;
+    box-sizing: border-box;
+    border-radius: 15px;
 }
