--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -260,6 +260,7 @@ animation: arrow-1 1s linear infinite;
     margin-top: 85px;
     color: #fff;
     position: relative;
+    padding-bottom: 37px;
 }
 .image-imageInst {  
     margin-left: 52px;
@@ -297,3 +298,42 @@ animation: arrow-1 1s linear infinite;
     border-radius: 19px;
 }
 
+/*----------------------------PINK-------------------------*/
+.background-pink {
+    background-color: #FAE8E4;
+    display: flex;
+    max-height: 900px;
+
+}
+
+/*.clatch {
+    display: flex;
+}*/
+
+.imagecl-small {
+    display: inline-block;
+
+    margin-top: 217px;
+    margin-left: 137px;
+    padding-left: 137px;
+
+}
+/*.pinkbg {
+    position: relative;
+    margin: 231px 0 0 0;
+}
+.skincl {
+    width: 488px;
+    height: 556px;
+    background-color: #fff;
+    margin: 168px 73px 176px 79px;
+}
+
+.h1 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 41px;
+    color: black;
+}
