--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -102,7 +102,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 92px;
     height: 92px;
     cursor: pointer;
-    background-color: #f1f1f1;
+    background-color: #e8e8e8;
 } 
 
   /* добавляем "гамбургер"*/
@@ -157,11 +157,12 @@ h1, h2, h3, h4, h5, h6 {
     color: #000;
     margin-top: 20px;
     margin-bottom: 30px;
-    width: 472px;
+    width: 470px;
     height: 127px;
     text-align: left;
     margin-left: 603px;
-    font: 'montserratblack';
+    font-style: normal;
+    font-weight: normal;
 }   
 
 /*--------Button--------*/
@@ -184,7 +185,8 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
     border: 1.5px solid #000000;
     margin-left: 603px;
-    
+    letter-spacing: .05em;
+    padding-left: 0;
 }
 
 #collection__button-text {
@@ -193,10 +195,10 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 13px;
     font-weight: 500;
     text-transform: uppercase;
-    margin-left: 46px;
+    margin-left: 43px;
     padding: 14px 0 30px 0;
     border: none;
-       
+    letter-spacing: .05em;
 }
 
 /*-----Arrow-------*/
@@ -220,7 +222,6 @@ h1, h2, h3, h4, h5, h6 {
     box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
     left:0;
     display: block;
-        
 }
 .arrow-1 div::after {
         content: '';
@@ -293,47 +294,323 @@ animation: arrow-1 1s linear infinite;
     height: 8.21px;
     left: 719.27px;
     top: 826.5px;
-
     background: #000000;
     border-radius: 19px;
 }
 
 /*----------------------------PINK-------------------------*/
+.pink {
+    height: 900px;
+    max-height: 900px;
+    width: 1440px;
+    max-width: 1440px;
+}
+
 .background-pink {
     background-color: #FAE8E4;
     display: flex;
-    max-height: 900px;
-
+    width: 100%;
+    height: 100%;
 }
 
-/*.clatch {
+.pink-container {
     display: flex;
-}*/
+}
 
-.imagecl-small {
-    display: inline-block;
-
-    margin-top: 217px;
+img.imagecl-small {
+    margin-top: 210px;
     margin-left: 137px;
-    padding-left: 137px;
+    position: absolute;
+    height: 400px;
+}
 
-}
-/*.pinkbg {
+.pinkbg {
+    display: flex;
     position: relative;
-    margin: 231px 0 0 0;
+    margin: 25px 66px 10px 231px;
 }
-.skincl {
+
+.skincl-container {
     width: 488px;
     height: 556px;
     background-color: #fff;
-    margin: 168px 73px 176px 79px;
+    margin: 168px 73px 0px 0;
 }
 
-.h1 {
+h1.skincl1 {
     font-family: Montserrat;
     font-style: normal;
     font-weight: bold;
     font-size: 40px;
     line-height: 41px;
     color: black;
+    padding: 45px 93px 0 55px;
+    max-width: 340px;
+}
+
+h2.skincl2 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 16px;
+    letter-spacing: 0.07em;
+    max-width: 220px;
+    text-transform: uppercase;
+    color: black;
+    opacity: .5;
+    padding: 15px 213px 0 55px;
+}
+
+.skincl3 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 21px;
+    padding: 64px 65px 35px 55px;
+    max-width: 368px;
+    margin: 0;
+
+}
+.price-container {
+    display: inline-flex;
+    justify-content: space-between;
+}
+
+#color-gray {
+
+    border-radius: 50%;
+    background-color: #dedede;
+    color: #DEDEDE;
+    width: 30px;
+    height: 30px;
+    border: 0px;
+    margin: 15px 16px 0 55px;
+   
+}
+
+#color-pink {
+
+    border: 0px;
+    background: #F29F9F;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    margin: 15px 15px 0 0;
+      
+}
+#color-violet {
+    border: 0px;
+    background: #A8BFF9;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    margin: 15px 13px 0 0;
+}
+
+#color-green {
+    border: 0px;
+    background: #90BD8F;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    margin: 15px 69px 0 0;
+}
+
+
+#color-gray:hover,
+#color-pink:hover,
+#color-violet:hover,
+#color-green:hover {
+    
+    transition: .5s; /* Время эффекта */
+    transform: scale(1.3); /* Увеличиваем масштаб */
+
+}
+
+.price {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 56px;
+    color: black;
+
+   
+}
+
+.color-gray:focus {
+    outline: none;
+}
+
+.input-number-container {
+    margin: 49px 15px 0 55px;
+    height: 46px;
+    display: inline-flex;
+    justify-content: space-between;
+    text-align: center;
+    
+}
+.btn-count {
+    width: 100px;
+    height: 44px;
+    background-color: #fff;
+    border: black 1;
+    text-align: center;
+    letter-spacing: .7em;
+    margin-right: 15px;
+    padding-left: 15px;
+    border: 1.5px solid #000000;
+    
+}
+.btn-basket {
+    width: 253px;
+    height: 44px;
+    background-color: #fff;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 13px;
+    padding-left: 0;
+    letter-spacing: .07em;
+    border: 1.5px solid #000000;
+}
+.another {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 16px;
+    border: none;
+    margin-top: 61px;
+    width: 236px;
+    height: 58px;
+    background-color: transparent;
+    padding-right: 80px;
+    letter-spacing: .05em;
+}
+
+/*--------------BEIGE-------------------------*/
+
+.beige-container {
+    background-color: #EBE3D8;
+    width: 1440px;
+    height: 900px;
+    max-width: 1440px;
+    max-height: 900px;
+    display: flex;
+}
+
+.img-backgr-rec {
+    margin-left: 378px;
+    width: 93px;
+    height: 900px;
+    z-index: 1;
+    position: absolute;
+}
+
+.img-backgr-beige {
+    margin-left: 85px;
+    width: 830px;
+    margin-top: 139px;
+    z-index: 3;
+    position: absolute;
+}
+
+/*----------------SERENE------------------------*/
+
+.serene-container {
+    
+    width: 475px;
+    height: 351px;
+    margin-left: 817px;
+    margin-top: 255px;
+    background: #FAE8E4;
+    z-index: 5;
+}
+
+.serene1 {
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 41px;
+    margin: 37px 53px 17px 47px;
+}
+
+.serene2 {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 16px;
+    letter-spacing: 0.07em;
+    margin: 0 208px 35px 47px;
+    color: black;
+    opacity: .5;
+}
+
+.serene3 {
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 21px;
+    margin: 0 57px 17px 50px;
+    color: #000000;
+    opacity: 0.5; 
+}
+
+.input-serene-container {
+    margin: 36px 15px 0 49px;
+    height: 46px;
+    display: inline-flex;
+    justify-content: space-between;
+    text-align: center;
+    
+}
+.btn-serene-count {
+    width: 100px;
+    height: 44px;
+    background-color: transparent;
+    border: black 1;
+    text-align: center;
+    letter-spacing: .7em;
+    margin-right: 15px;
+    padding-left: 15px;
+    border: 1.5px solid #000000;
+    
+}
+.btn-serene-basket {
+    width: 253px;
+    height: 44px;
+    background-color: transparent;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 13px;
+    padding-left: 0;
+    letter-spacing: .07em;
+    border: 1.5px solid #000000;
+}
+.another-serene {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 16px;
+    border: none;
+    margin-top: 61px;
+    margin-left: 122px;
+    width: 238px;
+    height: 58px;
+    background-color: transparent;
+    padding-right: 80px;
+    letter-spacing: .05em;
+}
+
+/*-----------------------------Для  разрешения 375 и менее ---------------------------*/
+@media screen and (min-width: 0px) and (max-width: 375px) {
+    .dropbtn {
+        display: none;
+    }
+    .image {
+        display: none;
+    }
+    .rec {
+        display: none;
+    }
 }
