--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -662,5 +662,7 @@ h2.skincl2 {
     .collection-container{
         margin-top: 69px;
         margin-left: none;
+        max-width: 375px;
     }
+    
 }
