--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -29,8 +29,6 @@ h1, h2, h3, h4, h5, h6 {
     left: 0px;
     top: 0px;
     position: absolute;
-    
- 
 }
 
 
@@ -608,87 +606,129 @@ h2.skincl2 {
 /*-----------------------------Для  разрешения 375 и менее ---------------------------*/
 @media screen and (min-width: 0px) and (max-width: 375px) {
     .pink,
-    .beige {
+    .beige,
+    .dropbtn,
+    .background-black,
+    .collection__subtitle,
+    #collection__button,
+    #collection__button-text,
+    .arrow-1,
+    .image,
+    .rec,
+    .scroll {
         display: none;
     }
 
     body {
         max-width: 100%;
     }
-    .dropbtn {
-        display: none;
-    }
-
-    .background-black {
-        display: none;
-    }
 
     .header__logo {
         color: black;
     }
 
-    .checkmark {
-        margin-top: 614px;
-        z-index: 2;
-        left: 50%;
-    }
-
-    .collection__subtitle {
-        display: none;
-    }
-
-    #collection__button {
-        display: none;
-    }
-
-    #collection__button-text {
-        display: none;
-    }
-
-    .arrow-1 {
-        display: none;
-    }
-
-    .image {
-        display: none;
-    }
-
-    .rec {
-        display: none;
-    }
-
-    .scroll {
-        display: none;
-    }
-
     .header {
         max-height: 69px;
+        max-width: 375px;
     }
 
     .hamburger-menu {
-        max-height: 69px;
+        height: 69px;
+        width: 70px;
     }
 
     .collection-container{
-        margin-top: 22px;
         margin-left: 0;
         max-width: 375px;
         background-position: top center;
-        
+        background: url(../images/pete-bellis-432867-unsplash.svg);
     }
   
     h1.collection__title{
-        margin: 0;
+        margin: 0 0 0 26px;
         font-size: 50px;
         line-height: 51px;
         padding-top: 402px;
     }
     
     .menu__btn {
-        margin-left: 202px;
+        margin: 0;
+        max-height: 69px;
+        max-width: 70px;
+        height: 69px;
+        width: 70px;
     }
 
     .header__logo {
         margin-left: 26px;
     }
+
+    .checkmark {
+        display: none;
+    }
+
+    .checkmark375 {
+        width: 20px;
+        height: 20px;
+        margin-top: 6px;
+        margin-left: 7px;
+        background-color: black;
+        
+    }
+    .checkmark_stem375 {
+        width:2px;
+        height:8px;
+        background-color:#fff;
+        margin-left:10px;
+        margin-top:6px;
+        margin-right: 5px;
+        -ms-transform: rotate(45deg); /* IE 9 */
+        -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+        transform: rotate(45deg);
+    }
+    
+    .checkmark_kick375 {
+        width:2px;
+        height:8px;
+        background-color:#fff;
+        margin-left: 5px;
+        margin-top: -8px;
+        -ms-transform: rotate(-45deg); /* IE 9 */
+        -webkit-transform: rotate(-45deg); /* Chrome, Safari, Opera */
+        transform: rotate(-45deg);
+    }
+
+    .container{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .header__inner {
+        display: flex;
+        justify-content: space-between;
+        width: 375px;
+        max-width: 375px;
+        text-align: center;
+    }
+
+    .menu__btn > span,
+    .menu__btn > span::before {
+    display: block;
+    position: absolute;
+    width: 27px;
+    height: 3px;
+    background-color: black;
+       
+      
+}
+    .menu__btn > span {
+    content: '';
+    top: 39px; 
+    margin-left: 23px;
+    
+}
+    .menu__btn > span::before {
+    content: '';
+    top: -10px;
+}
 }
