--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -10,16 +10,16 @@ h1, h2, h3, h4, h5, h6 {
 .wrap {
     width: 100%;
     max-width: 1440px;
-    height: 100vh;
-    max-height: 900px;
+    height: 100%;
+    /*max-height: 900px;*/
     margin: 0 auto;
 }
 
 .container {
     width: 100%;
     max-width: 1440px;
-    height: 100vh;
-    max-height: 900px;
+    height: 100%;
+   /* max-height: 900px;*/
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
     background-repeat: no-repeat;
     background-position: top left;
     max-width: 1440px;
-    height: 900px;
+    height: 100%;
 }
 
 .header__inner {
@@ -125,7 +125,7 @@ h1, h2, h3, h4, h5, h6 {
     content: '';
     top: 49px; 
     margin-left: 28px;
-}ы
+}
 
 .menu__btn > span::before {
     content: '';
@@ -139,8 +139,8 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: space-between;
     width: 100%;
     max-width: 1440px;
-    height: 100vh;
-    max-height: 900px;
+    height: 100%;
+   /* max-height: 900px;*/
 
 }
 
@@ -148,8 +148,8 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     width: 100%;
     max-width: 1440px;
-    height: 100vh;
-    max-height: 900px;
+    height: 100%;
+   /* max-height: 900px;*/
     background: url(../images/pete-bellis-432867-unsplash.png) no-repeat top;
     background-position: 13vw 16vh; 
     z-index: 2;
@@ -335,8 +335,8 @@ h1, h2, h3, h4, h5, h6 {
 /*----------------------------PINK-------------------------*/
 
 .pink {
-    height: 100vh;
-    max-height: 900px;
+    height: 100%;
+   /* max-height: 900px;*/
     width: 100%;
     max-width: 1440px;
     display: flex;
@@ -525,16 +525,16 @@ h2.skincl2 {
 .beige-container {
     background-color: #EBE3D8;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     max-width: 1440px;
-    max-height: 900px;
+   /* max-height: 900px;*/
     display: flex;
 }
 
 .img-backgr-rec {
     margin-left: 378px;
     width: 93px;
-    height: 900px;
+  /*  height: 900px;*/
     z-index: 1;
     position: absolute;
 }
@@ -650,9 +650,9 @@ h2.skincl2 {
     .wrap {
         margin: 0px auto;
         max-width: 1440px;
-        max-height: 900px;
+       /* max-height: 900px;*/
         width: 100%;
-        height: 100vh;
+        height: 100%;
     }
     body {
         margin: 0px auto;
