--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -357,7 +357,7 @@ h1, h2, h3, h4, h5, h6 {
     min-width: 463px;
     max-height: 556px;
     background-color: #fff;
-    margin: 168px 73px 0px;
+    margin: 168px 73px 175px;
     margin-left: 61%;
 }
 
@@ -527,7 +527,7 @@ h2.skincl2 {
     width: 100%;
     height: 100%;
     max-width: 1440px;
-   /* max-height: 900px;*/
+    max-height: 900px;
     display: flex;
 }
 
@@ -550,7 +550,7 @@ h2.skincl2 {
 /*----------------SERENE------------------------*/
 
 .serene-container {
-    
+    margin-bottom: 26.5%;
     width: 475px;
     height: 351px;
     margin-left: 817px;
@@ -704,7 +704,14 @@ h2.skincl2 {
 
     .scrollrec {
         top: 770px;
-    }    
+    }
+    
+    .image-imageInst,
+    .image-imageVK,
+    .image-imageFcb {
+        padding-bottom: 70px;
+    }  
+
 
     /*-------------------MEDIA PINK----------------------*/
     .pink-container {
@@ -875,6 +882,12 @@ h2.skincl2 {
         border-right: 3px solid black;
         flex-direction: column;
     }
+
+    .image-imageInst,
+    .image-imageVK,
+    .image-imageFcb {
+        padding-bottom: 70px;
+    }  
 
 
     /*---------------MEDIA PINK----------------------------*/
@@ -1055,6 +1068,12 @@ h2.skincl2 {
         border-right: 4px solid black;
         flex-direction: column;
     }
+
+    .image-imageInst,
+    .image-imageVK,
+    .image-imageFcb {
+        padding-bottom: 68px;
+    }    
 
 /*---------------------------MEDIA PINK-------------------------*/
     .pink-container {
@@ -1239,6 +1258,12 @@ h2.skincl2 {
         border-right: 4px solid black;
         flex-direction: column;
     }
+
+    .image-imageInst,
+    .image-imageVK,
+    .image-imageFcb {
+        padding-bottom: 72px;
+    }  
 
 /*---------------------------MEDIA PINK-------------------------*/
     .pink-container {
